fix(NodesGridView): fix spacing between node dials and filter
Fixes the spacing between node dials and filter row when the
size of the screen is changed. Fixes the header bar shrinking
issue. Adds a dot for "Other" in the side list. Lastly, adds
scrolling for the nodes grid view.

Closes DCOS-39972

--- a/src/styles/components/filter-bar/styles.less
+++ b/src/styles/components/filter-bar/styles.less
@@ -2,6 +2,7 @@
 
   .filter-bar {
     display: flex;
+    flex-shrink: 0;
     flex-wrap: wrap-reverse;
     width: 100%;
 
