--- a/src/styles/components/nodes-grid-view/styles.less
+++ b/src/styles/components/nodes-grid-view/styles.less
@@ -4,6 +4,8 @@
   .nodes-grid {
     display: flex;
     flex-direction: row;
+    overflow-x: hidden;
+    overflow-y: auto;
     position: relative;
 
     .nodes-grid-legend {
